# trio_artifacts_JFP

./: .gitignore  LICENSE.txt  Makefile  README.md  ablation_list  artifact.py  bench_list  bench_list_temp  build  log_to_csv.py  results.txt  run_syrup.py  run_test.py  setenv  syrup_log
burst/: Makefile  (+1 more)
burst/_build/default/src/: Abstraction.pp.ml  AngelicEval.pp.ml  Automata.pp.ml  Burst.cmxa  ClassifiedType.pp.ml  Context.pp.ml  CrazyFTASynthesizer.pp.ml  Declaration.pp.ml  EnumerativeVerifier.pp.ml  Eval.ml  Eval.pp.ml  FTAConstructor.pp.ml  InputVerifier.pp.ml  KnowledgeBase.pp.ml  Lang.ml  Lang.pp.ml  Param.pp.ml  ParserContainer.pp.ml  Predicate.pp.ml  Prelude.pp.ml  Problem.ml  Problem.pp.ml  QC.pp.ml  QuickCheckVerifier.pp.ml  SafeEval.pp.ml  SimpleFTASynthesizer.pp.ml  Synthesizer.pp.ml  Synthesizers.pp.ml  TermClassification.pp.ml  Type.pp.ml  Typecheck.pp.ml  ValueTCIntegration.pp.ml  burst.ml-gen  consts.pp.ml  denotation.pp.ml  dune  fuzz.ml  fuzz.pp.ml  lexer.ml  lexer.pp.ml  (+22 more)
burst/_build/default/src/.Burst.objs/: burst__Abstraction.impl.all-deps  burst__Abstraction.impl.d  burst__AngelicEval.impl.d  burst__Automata.impl.all-deps  burst__Automata.impl.d  burst__ClassifiedType.impl.all-deps  burst__ClassifiedType.impl.d  burst__Consts.impl.d  burst__Context.impl.d  burst__CrazyFTASynthesizer.impl.all-deps  burst__CrazyFTASynthesizer.impl.d  burst__Declaration.impl.d  burst__Denotation.impl.all-deps  burst__Denotation.impl.d  burst__EnumerativeVerifier.impl.all-deps  burst__EnumerativeVerifier.impl.d  burst__Eval.impl.d  burst__FTAConstructor.impl.all-deps  (+45 more)
(+4425 files in other folders)
