(env
    (debug (ocamlopt_flags (:standard -g -Oclassic)))
    (_ (ocamlopt_flags (:standard -O3 -rounds 6))))

(menhir (modules parser parser2))

(ocamllex lexer lexer2)

(library
    (name Burst)
    (public_name Burst)
    (libraries myStdLib timbuk timbukSpec)
    (preprocess (pps ppx_bin_prot ppx_hash ppx_deriving.std ppx_let ppx_optcomp ppx_compare ppx_sexp_conv
    ))
    (flags (:standard -w -6-27-30-32-33-39))
    )
